k8s/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
        - name: frontend-container
          image: ghcr.io/himatsumu/himatsumu_front:latest
          ports:
            - containerPort: 80
